Fixed expanding/collapsing of widgets in the AgentTicketHistory screen.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.TicketHistory.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.TicketHistory.css
@@ -27,10 +27,6 @@
     width: 30px;
 }
 
-.WidgetSimple .Header h2 {
-    position: relative;
-}
-
 .WidgetSimple .Header h2 span {
     font-size: 11px;
     position: absolute;
